@@ -4,6 +4,7 @@
   version 2.0.0 final
 ==========================
 - FIX: When migrating from ivyde alpha to ivyde beta eclipse is throwing NPE at startup (IVYDE-136) (thanks to Daniel Becheanu)
+- FIX: The retrieve configuration doesn't support '*' as accepted types (IVYDE-137) (thanks to Daniel Becheanu)
 
   version 2.0.0 beta1
 ==========================
